# rust-workshop

./: .gitignore  .gitmodules  .ignore  Cargo.toml  README.md  helix-demo-config.toml  invitation.md  justfile
.github/workflows/: deploy.yml  pages.yml
day_1/: index.md
day_2/: index.md
demos/adapters/: Cargo.toml
demos/async_intro/: Cargo.toml
demos/async_intro/src/: main.rs
demos/blanket_trait_impl/: Cargo.toml
demos/blanket_trait_impl/src/: main.rs
demos/cargo_deny/: Cargo.toml  deny.toml
demos/cargo_deny/src/: main.rs
demos/custom_range_iterator/: Cargo.toml
demos/custom_range_iterator/src/: main.rs
demos/day_2/declare_mod/: Cargo.toml
demos/day_2/error_handling/: README.md
demos/day_3/adaptors/: Cargo.toml
demos/day_3/for-loops/: alacritty_config.toml  justfile  zellij.kdl
demos/day_3/for_loops/: alacritty_config.toml  justfile
demos/day_4/cargo_deny/: Cargo.toml  README.md
demos/day_4/itertools/: Cargo.toml
demos/day_4/serde/: Cargo.toml  README.md
demos/declare_mod/: Cargo.toml
demos/declare_mod/src/: main.rs
demos/destructors/src/: main.rs
demos/divan/: Cargo.toml  README.md
demos/divan/src/: lib.rs
demos/dynamic_dispatch/: Cargo.toml
demos/dynamic_dispatch/src/: main.rs
demos/error_handling/: Cargo.toml
demos/error_handling/src/: main.rs
demos/exhaustiveness/: Cargo.toml
demos/exhaustiveness/src/: main.rs
demos/fn_trait_retain/: Cargo.toml
demos/fn_trait_retain/src/: main.rs
demos/for_loops/: alacritty_config.toml  justfile  zellij.kdl
demos/for_loops/versions/: 1.rs  3.rs  4.rs  6.rs
demos/itertools/: Cargo.toml
demos/itertools/src/: main.rs
demos/mutable_references/: Cargo.toml
demos/mutable_references/src/: main.rs
demos/reference_cycle_memory_leak/: Cargo.toml
demos/reference_cycle_memory_leak/src/: main.rs
demos/scope_and_destructors/: Cargo.toml
demos/serde/: Cargo.toml  README.md
demos/serde/src/: main.rs
demos/session_1/destructors/: Cargo.toml
demos/session_1/mutable_references/: Cargo.toml
demos/shared_state_mutex/: Cargo.toml
demos/shared_state_mutex/src/: main.rs
demos/single_owner/: Cargo.toml
demos/single_owner/src/: main.rs
demos/spawning_threads/: Cargo.toml
demos/use_lib/: Cargo.toml
demos/using_a_library/: Cargo.toml
dev/: demo.zellij.kdl  zellij.kdl
dev/scripts/: build_all_slides.sh  build_fp_book.sh  deploy_gh_pages.sh  setup.sh
dev/zellij/: README.md  default.kdl  demo.kdl
docs/: .nojekyll
docs/1/: _redirects  index.html
docs/2/: _redirects  index.html
docs/3/: _redirects  index.html
docs/4/: 404.html  _redirects
docs/5/: 404.html  _redirects
docs/6/: _redirects  index.html
final_project/: .gitignore  book.toml
final_project/impl/: README.md
final_project/impl/paekli-cli/: Cargo.toml
final_project/impl/paekli-cli/src/: main.rs
final_project/impl/paekli-core/: Cargo.toml
final_project/impl/paekli-core/src/: http_api.rs  lib.rs  store.rs
final_project/impl/paekli-core/src/store/: file_system.rs  http_client.rs  sql_database.rs
final_project/impl/paekli-http/: Cargo.toml
final_project/impl/paekli-http/src/: main.rs
final_project/impl/paekli-py/: Cargo.toml  foo.py  pyproject.toml
final_project/impl/paekli-py/src/: lib.rs
final_project/impl/paekli-web/: Cargo.toml  index.html
final_project/impl/paekli-web/src/: main.rs
final_project/reference_impls/paekli-http/: Cargo.toml
final_project/reference_impls/paekli-http/src/: main.rs
final_project/src/: SUMMARY.md  clients.md  components.md  file_system.md  guis.md  http.md  http_client.md  integrations.md  introduction.md  python_module.md  servers.md  shared_lib.md  sql_database.md  storage_backend.md  web_app_http.md  web_app_websocket.md  websocket.md
slides/: .gitignore  README.md  index.html  package-lock.json  package.json  style.css  styles.css
slides/components/: Orange.vue
slides/dist_append/: index.html
slides/setup/: shiki.ts
(+653 files in other folders)
