[package]
name = "paekli-cli"
version = "0.1.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
directories = "5.0.1"
paekli-core = { version = "0.1.0", path = "../paekli-core" }
time = "0.3.34"
