[package]
name = "paekli-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
time = "0.3.34"
utoipa = "4.2.0"
