[package]
name = "paekli-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
reqwest = { version = "0.11.27", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
time = "0.3.34"
tokio = { version = "1.36.0", features = ["full"] }
utoipa = "4.2.0"
