[package]
name = "paekli-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "paekli_py"
crate-type = ["cdylib"]

[dependencies]
paekli-core = { version = "0.1.0", path = "../paekli-core" }
pyo3 = "0.20.0"
